welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:-31: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-30: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-27: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^Runner:-16: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^Runner:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^